<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ColorPicker">

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/cancel_button"
        android:onClick="cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/color_preview"
        app:layout_constraintTop_toBottomOf="@+id/color_preview" />

    <Button
        android:id="@+id/accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/accept_button"
        android:onClick="led_send"
        app:layout_constraintEnd_toEndOf="@+id/color_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancel_button" />

    <SeekBar
        android:id="@+id/red_seek_bar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:max="15"
        android:progress="3"
        android:progressBackgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/initialize_led"
        app:layout_constraintTop_toBottomOf="@+id/select_start_led" />

    <SeekBar
        android:id="@+id/intensity_seek_bar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:max="14"
        android:progress="3"
        android:progressBackgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/red_seek_bar"
        app:layout_constraintTop_toBottomOf="@+id/blue_seek_bar" />

    <SeekBar
        android:id="@+id/blue_seek_bar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:max="15"
        android:progress="3"
        android:progressBackgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/red_seek_bar"
        app:layout_constraintTop_toBottomOf="@+id/green_seek_bar" />

    <SeekBar
        android:id="@+id/green_seek_bar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:max="15"
        android:progress="3"
        android:progressBackgroundTint="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/red_seek_bar"
        app:layout_constraintTop_toBottomOf="@+id/red_seek_bar" />

    <TextView
        android:id="@+id/intensity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/intensity_text"
        app:layout_constraintBottom_toTopOf="@+id/intensity_seek_bar"
        app:layout_constraintStart_toStartOf="@+id/intensity_seek_bar" />

    <TextView
        android:id="@+id/color_blue_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/color_blue_text"
        app:layout_constraintBottom_toTopOf="@+id/blue_seek_bar"
        app:layout_constraintStart_toStartOf="@+id/blue_seek_bar" />

    <TextView
        android:id="@+id/color_green_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/color_green_text"
        app:layout_constraintBottom_toTopOf="@+id/green_seek_bar"
        app:layout_constraintStart_toStartOf="@+id/green_seek_bar" />

    <TextView
        android:id="@+id/color_red_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/color_red_text"
        app:layout_constraintBottom_toTopOf="@+id/red_seek_bar"
        app:layout_constraintStart_toStartOf="@+id/red_seek_bar" />

    <TextView
        android:id="@+id/Initialization_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/initialization_label"
        app:layout_constraintBottom_toTopOf="@+id/initialize_led"
        app:layout_constraintStart_toStartOf="@+id/initialize_led" />

    <TextView
        android:id="@+id/select_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/select_leds_start_text"
        app:layout_constraintBottom_toTopOf="@+id/select_start_led"
        app:layout_constraintStart_toStartOf="@+id/select_start_led" />

    <TextView
        android:id="@+id/select_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/select_leds_stop_text"
        app:layout_constraintBottom_toTopOf="@+id/select_start_led"
        app:layout_constraintStart_toStartOf="@+id/select_stop_led" />

    <EditText
        android:id="@+id/select_start_led"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/select_leds_start"
        android:inputType="number"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/initialize_led"
        app:layout_constraintTop_toBottomOf="@+id/initialize_led" />

    <EditText
        android:id="@+id/select_stop_led"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/select_leds_stop"
        android:inputType="number"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/initialize_led"
        app:layout_constraintStart_toEndOf="@+id/select_start_led"
        app:layout_constraintTop_toBottomOf="@+id/select_start" />

    <EditText
        android:id="@+id/initialize_led"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:hint="@string/initialization_text"
        android:inputType="number"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/color_preview"
        android:layout_width="149dp"
        android:layout_height="79dp"
        android:layout_marginTop="24dp"
        android:background="#33333333"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intensity_seek_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>