<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/microphone_record"
        android:layout_width="311dp"
        android:layout_height="324dp"
        android:contentDescription="@string/voice_control_icon"
        android:onClick="record_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599"
        app:srcCompat="@android:drawable/ic_btn_speak_now" />

    <Button
        android:id="@+id/led_setup"
        android:layout_width="311dp"
        android:layout_height="79dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#DDD"
        android:contentDescription="@string/led_control"
        android:hint="@string/led_setup"
        android:onClick="led_controls_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/microphone_record" />

    <Button
        android:id="@+id/documentation"
        android:layout_width="311dp"
        android:layout_height="79dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#DDD"
        android:contentDescription="@string/documentation"
        android:hint="@string/documentation"
        android:onClick="documentation_button"
        app:layout_constraintBottom_toTopOf="@+id/microphone_record"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/bluetooth_status"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/documentation"
        app:layout_constraintStart_toStartOf="@+id/documentation" />


</androidx.constraintlayout.widget.ConstraintLayout>